client/kube/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telehealth-client
  namespace: telehealth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: telehealth-client
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: telehealth-client
    spec:
      containers:
        - name: telehealth-client
          image: ${DOCKERHUB_USERNAME}/telehealth_client:${IMAGE_TAG}
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
