client/kube/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: telehealth-client-service
  namespace: telehealth
spec:
  selector:
    app: telehealth-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
