client/kube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: telehealth-client-ingress
  namespace: telehealth
spec:
  rules:
    - host: telehealth.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: telehealth-client-service
                port:
                  number: 80
